# MlBackend

./: .gitignore  README.md  p.py  pyproject.toml  requirements.txt
app/: __main__.py
app/image_model/: __init__.py
app/sentiment_model/: __init__.py
