[tool.poetry]
name = "oakridgebackend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Keras = "^2.4.3"
scipy = "^1.6.0"
tensorflow = "^2.4.1"
Pillow = "^8.1.0"
starlette = "^0.14.1"
uvicorn = "^0.13.3"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
